[tool.poetry]
name = "repl_python3_Max"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.26.0"
json2json = "^0.1.0"
heroku = "^0.1.4"
telebot = "^0.0.4"
pyTelegramBotAPI = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
